# cartography-webapp

./: .gitignore  CMakeLists.txt  Makefile  README.md  broadcasting_struct.cpp  broadcasting_struct.h  crow_all.h  debug.sh  functions.cpp  functions.h  geodata_insert.cpp  geodata_insert.h  listener_udp.cpp  listener_udp.h  listener_udp_multicasting.cpp  listener_udp_multicasting.h  main.cpp  multicasting_struct.cpp  multicasting_struct.h  server_ip_solver.cpp  server_ip_solver.h  structs.h  support_functions.h  utils.cpp  utils.h
debug/: .gitignore  .phony.mk  Makefile  gml2graphml.py  network.def.dot
frontend/: .phony.mk  Makefile  a.json  backend.js  index.html  index.js  leafletLayers.js  localize.js  package-lock.json  package.json  stylesheet.css  webpack.config.js
network/: coordinates.json  gpsLastSeen_fake.json  gpsPompier.json  graphPompier.xml  netgraph.xml  netgraph_fake.xml
toolchain/: .config  libcurl.hash
toolchain/overrides/package/libcurl/: libcurl.hash
